--- a/CombatStyleHTML.css
+++ b/CombatStyleHTML.css
@@ -1,3 +1,4 @@
+
 .background{
   display: flex;
   justify-content: center;
@@ -11,7 +12,6 @@
   display: flex;
   border-style: groove;
   width: 80%;
-  height: 50%;
   justify-content: space-around;
 }
 
@@ -36,11 +36,6 @@
   height: 100px;
 }
 
-.Space{
-  display: flex;
-  border-style: groove;
-  height: 500px;
-}
 .Characters{
   display: flex;
   justify-content: space-around;
@@ -67,4 +62,9 @@
 .Golem{
   width:105px;
   height: 85px;
+}
+
+.Space{
+  height: 25%;
+  width: 25%;
 }
