--- a/CombatStyleHTML.css
+++ b/CombatStyleHTML.css
@@ -11,6 +11,7 @@
 .MonsterPlacement{
   display: flex;
   border-style: groove;
+  align-items: flex-end;
   width: 100%;
   height: 350px;
   justify-content: space-around;
@@ -20,7 +21,7 @@
   display: flex;
   border-style: groove;
   width: 250px;
-  height: 350px;
+  height: 200px;
   flex-direction: column;
   align-items: center;
 }
@@ -37,7 +38,7 @@
 #PMonster{
   display: flex;
   border-style: groove;
-  width: 220px;
+  width: 300px;
   height: 400px;
 }
 
