--- a/CombatStyleHTML.css
+++ b/CombatStyleHTML.css
@@ -19,11 +19,11 @@
 
 #Monster{
   display: flex;
-  border-style: groove;
-  width: 250px;
-  height: 200px;
+  border-style: groove; 
+  width: 300px;
+  height: 250px;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
 }
 
 #Bubble{
@@ -62,16 +62,11 @@
   height: 200px;
 }
 
-.Golem{
-  width:105px;
-  height: 85px;
-}
-
 .Space{
   height: 100px;
   width: 100px;
 }
 
-#PMonster{
-  
+.DetailsMonster1:hover {
+  display: block;
 }
