--- a/CombatStyleHTML.css
+++ b/CombatStyleHTML.css
@@ -13,7 +13,7 @@
   border-style: groove;
   align-items: flex-end;
   width: 100%;
-  height: 350px;
+  height: 300px;
   justify-content: space-around;
 }
 
@@ -30,9 +30,9 @@
   display: flex;
   border-style: groove;
   justify-content: space-around;
-  font-size: x-large;
-  width: 250px;
-  height: 100px; 
+  font-size: large;
+  width: 150px;
+  height: 60px; 
 }
 
 .Characters{
@@ -56,6 +56,6 @@
 }
 
 .Space{
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
 }
