--- a/CombatStyleHTML.css
+++ b/CombatStyleHTML.css
@@ -3,14 +3,12 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  border-style: groove;
   width: 100%;
   height: 100%;;
 }
 
 .MonsterPlacement{
   display: flex;
-  border-style: groove;
   align-items: flex-end;
   width: 100%;
   height: 300px;
@@ -19,7 +17,6 @@
 
 #Monster{
   display: flex;
-  border-style: groove; 
   width: 300px;
   height: 250px;
   flex-direction: column;
@@ -28,12 +25,16 @@
 
 .DetailsMonster{
   display: flex;
-  border-style: groove;
+  border-style: ridge;
+  border-width: 7px; 
+  border-color: #696774;
   justify-content: space-around;
+  background-color: #DF6A78;
   font-size: large;
-  width: 200px;
+  width: 150px;
   height: 60px; 
 }
+
 
 #Bubble{
   visibility: hidden;
@@ -42,7 +43,6 @@
 .Characters{
   display: flex;
   justify-content: space-around;
-  border-style: groove;
   width: 100%;
   height: 210px;
 }
@@ -56,16 +56,19 @@
   line-height: 50%;
   width: 200px;
   height: 200px;
+  border-width: 4px;
+  border-style: double;
+  background-color: #D5D8DC;
 }
 
 .PV_Monster{
-  border-style: groove;
-  width: 80px
+  justify-content: center;
+  align-items: center;
+  width: 40px
 }
 
 .Target{
   display: flex;
-  border-style: groove;
   align-items: center;
   justify-content: space-around;
   flex-direction: row;
@@ -76,13 +79,16 @@
 .Target_Monster{
   display: flex;
   border-style: groove;
-  font-size: 30px;
+  font-size: 20px;
   justify-content: center;
-
   align-items: baseline;
   flex-direction: row;
-  height: 100px;
-  width: 200px;
+  height: 70px;
+  width: 100px;
+  border-style: ridge;
+  border-width: 4px;
+  border-color: #48424D;
+  background-color: #D5D8DC;
 }
 
 button{
