--- a/CombatStyleHTML.css
+++ b/CombatStyleHTML.css
@@ -7,6 +7,11 @@
   height: 100%;;
 }
 
+.PictureBackground {
+  height: 100%;
+  width: 100%;
+}
+
 .MonsterPlacement{
   display: flex;
   align-items: flex-end;
